notes/iptables/iptables.rules
# /var/lib/iptables/rules-save

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp --fragment -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
# Remove if your network doesn't rely on DHCP:
-A INPUT -m conntrack --ctstate NEW -p udp --dport 67 --sport 68 -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -p tcp -m multiport --dports 22 -j ACCEPT

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
# Remove if your network doesn't rely on DHCP:
-A OUTPUT -m conntrack --ctstate NEW -p udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p udp -m multiport --dports 53,123 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp -m multiport --dports 53,80,443 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "failedOut: "
-A OUTPUT -j REJECT

COMMIT
